@@ -1,12 +1,13 @@
 dependencies {
     // Version controlled by dependency management plugin
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-    implementation 'org.glassfish.jersey.core:jersey-client'
-    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson'
-    implementation 'org.glassfish.jersey.media:jersey-media-multipart'
+    implementation 'org.openapitools:jackson-databind-nullable:0.2.3'
+    implementation 'io.swagger:swagger-annotations:1.6.2'
 }
 
-def artifactGroup = "${group}.rawls"
+java {
+    // Builds sources into the published package as part of the 'assemble' task.
+    withSourcesJar()
+}
 
 task downloadRawlsYaml(type: Download) {
     // this was the latest git commit hash at development time
@@ -14,35 +15,29 @@ task downloadRawlsYaml(type: Download) {
     dest "${buildDir}/rawls-api-docs.yaml"
 }
 
-/*
-generateSwaggerCode {
-    inputFile = file("${buildDir}/rawls-api-docs.yaml")
-    language = 'java'
-    library = 'jersey2'
+def artifactGroup = "${group}.rawls"
 
-    // For Swagger Codegen v3 on Java 16+
-    // See https://github.com/swagger-api/swagger-codegen/issues/10966
-    jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED']
+openApiGenerate {
+    inputSpec = "${buildDir}/rawls-api-docs.yaml"
+    generatorName = "java"
 
-    components = [
-        apiDocs  : false, apiTests: false,
-        modelDocs: false, modelTests: false
-    ]
+    apiPackage = "${artifactGroup}.api"
+    modelPackage = "${artifactGroup}.model"
+    invokerPackage = "${artifactGroup}.client"
 
-    additionalProperties = [
-        modelPackage  : "${artifactGroup}.model",
-        apiPackage    : "${artifactGroup}.api",
-        invokerPackage: "${artifactGroup}.client",
+    configOptions = [
         dateLibrary   : 'java11',
-        java8         : true
+        java8         : 'true',
+        library       : 'native'
     ]
-
-    rawOptions = ['--ignore-file-override', "${projectDir}/.swagger-codegen-ignore"]
 }
 
-generateSwaggerCode.dependsOn downloadRawlsYaml
+String openapiTargetDir = "${openApiGenerate.outputDir.get()}/src/main/java"
 
-idea.module.generatedSourceDirs = [file("${generateSwaggerCode.outputDir}/src/main/java")]
-sourceSets.main.java.srcDir "${generateSwaggerCode.outputDir}/src/main/java"
-compileJava.dependsOn generateSwaggerCode
-*/
+// get intellij to recognize openapi generated directory
+idea.module.generatedSourceDirs = [file("${openapiTargetDir}")]
+sourceSets.main.java.srcDir "${openapiTargetDir}"
+
+tasks.openApiGenerate.dependsOn tasks.downloadRawlsYaml
+compileJava.dependsOn tasks.openApiGenerate
+sourcesJar.dependsOn tasks.openApiGenerate
